--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -291,9 +291,9 @@ do {
             \end{lstlisting}
     
     \newpage
-    \section{Application}
+    \section{Testing}
         
-        \subsection{Testing System Structure}
+        \subsection{System Structure}
             System where the programs were tested had the structure shown in the figure \ref{fig:TestingSystem}.
             VirtualBox was used as the virtualization engine. As you can see in the figure \ref{fig:VBWinMint},
             virtualized Linux Mint has two interfaces. One of them is set to NAT, linux named it {\it enp0s3}.
@@ -332,7 +332,7 @@ do {
             \end{figure}
         
         \newpage
-        \subsection{Testing}
+        \subsection{Procedure}
 
             Using the sniffer, there were discovered routes for RIPv2 (table \ref{tab:ripv2routingdata})
             and RIPng (table \ref{tab:ripngroutingdata}).
